	20100415 (Till Straumann):

	* BLDApp/Db/BLDMCast.db: Added records for reading statistics and
	setting the FCOM sampling delay.

	20100413 (Till Straumann):

	* BLDApp/src/devBLDMcastWfRecv.c, BLDApp/src/devBLDMcastWfRecv.dbd,
	BLDApp/src/bldrx_evr.dbd, BLDApp/Db/BLDMCastWfRecv.db:
	Added waveform device support that reads BLD packets into a waveform.

	20100413 (Till Straumann):

	* BLDApp/src/BLDMCast.c: register statistics counters and
	timer delay with devBusMapped so that they can be read/written
	using EPICS records.

	20100413 (Till Straumann):

	* BLDApp/src/BLDMCast.h: moved (and renamed) definition of
	destination MC address and port number.

	20100408 (Till Straumann):

	* BLDApp/src/BLDMCast.c, BLDApp/src/BLDMCast.h,
	BLDApp/src/devBLDMcastStatus.c: Use 'bld' prefix for all global
	variables.

	Added C++ 'extern "C"' in header.

	Some beautification and elimination of dead code.

	20100401 (Till Straumann):

	* BLDApp/src/BLDMCast.c: Cannot use a UdpComm packet buffer to store
	ebeam data because the device support stuff accesses the same buffer.
	Hence it has to be copied anyways :-(. Therefore we use udpCommSend()...

	20100401 (Till Straumann):

	* BLDApp/src/BLDMCast.c: Added code to send using udpComm rather
	than straight BSD sockets.

	20100401 (Till Straumann):

	* BLDApp/src/BLDMCast.c: FIXED arithmetics when setting HW timer
	(used 32-bit operations, storing result only into 64-bit which let
	the result be truncated and way too small).

	Added per-PV unmatched timestamp counters.

	Added some more debugging code (to be removed eventually).

	20100401 (Till Straumann):

	* BLDApp/src/BLDMCast.c: Read fast data from FCOM (1st shot at things).

	20100326 (Till Straumann):

	* BLDApp/src/BLDMCast.c: Use timestamp returned by evrTimeGetFromPipeline()
	as a reference that must be matched by all PVs.
	Rather than memcmp()ing timestamps: check their pulse ID and verify
	that the timestamps match within a few minutes.

	20100326 (Till Straumann):
